added navbar & search bar & taskcard

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box; /* Box model */
 }
 
 body{
-    background-color: rgb(194, 238, 240);
-    font-family: "Poppins", sans-serif;
+    font-family: 'Poppins', sans-serif;
+    background-color: #ebf2ff;
 }
